--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_ml_vision: ^0.10.0
   speech_to_text: ^3.2.0
   flutter_tts: ^3.0.0
+  #firebase_database: ^6.0.2
+
 
 dev_dependencies:
   flutter_test:
