--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,11 @@ dependencies:
   flutter_tts: ^3.0.0
   #firebase_database: ^6.0.2
   #audioplayers: ^0.18.3
-  #advance_pdf_viewer: ^1.2.2
+  advance_pdf_viewer: ^1.2.2
   #native_pdf_view: ^4.0.1
-  flutter_full_pdf_viewer: ^1.0.6
+  #flutter_full_pdf_viewer: ^1.0.6
+  #flutter_pdfview: ^1.0.4
+
 
 
 
