--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  native_pdf_view: any
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,11 +43,12 @@ dependencies:
   speech_to_text: ^3.2.0
   flutter_tts: ^3.0.0
   #firebase_database: ^6.0.2
-  #audioplayers: ^0.18.3
+  audioplayers: ^0.18.3
   advance_pdf_viewer: ^1.2.2
-  #native_pdf_view: ^4.0.1
-  #flutter_full_pdf_viewer: ^1.0.6
-  #flutter_pdfview: ^1.0.4
+  #flutter_plugin_pdf_viewer: any
+
+
+
 
 
 
