--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   speech_to_text: ^3.2.0
   flutter_tts: ^3.0.0
   #firebase_database: ^6.0.2
-  audioplayers: ^0.18.3
+#  audioplayers: ^0.18.3
   advance_pdf_viewer: ^1.2.2
   #flutter_plugin_pdf_viewer: any
 
