--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,9 @@ dependencies:
   flutter_tts: ^3.0.0
   #firebase_database: ^6.0.2
 #  audioplayers: ^0.18.3
-  advance_pdf_viewer: ^1.2.2
+#  advance_pdf_viewer: ^1.2.2
   #flutter_plugin_pdf_viewer: any
-
+  flutter_plugin_pdf_viewer: ^1.0.7
 
 
 
