--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,7 @@ dependencies:
 #  advance_pdf_viewer: ^1.2.2
   #flutter_plugin_pdf_viewer: any
   flutter_plugin_pdf_viewer: ^1.0.7
-
-
-
-
+  audioplayer: ^0.8.1
 
 
 
